--- a/src/web/package.json
+++ b/src/web/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-dynamodb": "^0.1.69",
     "aws-sdk": "^2.194.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
